# inkex-bh

./: .pre-commit-config.yaml  CHANGES.md  README.md  TODO.md  bh-count-symbols.inx  bh-count-symbols.py  bh-create-inset.inx  bh-create-inset.py  bh-hide-rats.inx  bh-hide-rats.py  bh-update-symbols.inx  bh-update-symbols.sh  bh-update-symbols.xslt  bh_debug.py  inkscape.sh  pyproject.toml  tox.ini
.github/workflows/: tests.yml
barnhunt/: bh-count-symbols.inx  bh-count-symbols.py  bh-create-inset.inx  bh-create-inset.py  bh-hide-rats.inx  bh-hide-rats.py  bh_constants.py  bh_debug.py  bh_inkex_bugs.py  bh_typing.py
inkex_bh/: _compat.py  create_inset.py  hide_rats.py  update_symbols.py
inkex_bh/extensions/: bh-create-inset.inx  bh-hide-rats.inx  update-symbols.inx
inkscape_barnhunt/: bh-count-symbols.inx  bh-count-symbols.py  bh-create-inset.inx  bh-create-inset.py  bh-hide-rats.inx  bh-hide-rats.py  run-module.py
inkscape_barnhunt/inkex_bh/: count_symbols.py  create_inset.py  hide_rats.py  workarounds.py
tests/: conftest.py  test_count_symbols.py  test_create_inset.py  test_hide_rats.py  test_random_seed.py  test_run_module.py  test_update_symbols.py
